--- a/adjustforinflation.Rmd
+++ b/adjustforinflation.Rmd
@@ -5,18 +5,15 @@ date: "2022-11-4"
 output: html_document
 ---
 This file has contains a  for loop that:
+
 inputs 1.) a vector of dollar prices, 2.) a vector of years those prices were from and outputs a vector of adjusted prices for inflation 
 for a specified country and date. 
-
- * For loop on line 75. 
- *There's an example of how to use it on line 40.
- * Line 93: Using this loop for budget and revenue on movies_filtered, don't have a vector of years yet though.
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-Imports
+Imports (didnt use all of these just copy and pasted imports from another file)
 ```{r}
 library(tidyverse)
 library(readr)
@@ -26,18 +23,20 @@ library(caret)
 library(klaR)
 ```
 
-```{r}
-require("quantmod");require("PerformanceAnalytics");require("Quandl")
-```
-
+--
 Download data
+--
 ```{r}
-movie_test <- read_csv('movie_test.csv', col_names =c('title','genres','original_language','production_companies','budget','revenue','runtime','vote_average','vote_count','credits'), trim_ws = TRUE, show_col_types = FALSE)
+movies_filtered <- read_csv('movies_filtered.csv', col_names =c('title','genres','original_language','production_companies','release_date','budget','revenue','vote_average','vote_count','credits'), trim_ws = TRUE, show_col_types = FALSE)
+
+movies_filtered <- movies_filtered[-c(1), ]
+```
+
+```{r}
+data <- write_excel_csv(movies_filtered, "pleasework.csv")
 ```
 
 
-============================================================
-example from https://app.datacamp.com/workspace/preview?_tag=rdocs&rdocsPath=packages%2FpriceR%2Fversions%2F0.1.6%2Ftopics%2Fadjust_for_inflation&utm_source=r-docs&utm_medium=docs&utm_term=adjust_for_inflation&utm_content=run_example_in_workspace
 
 ```{r}
 if(!require('PriceR')){
@@ -45,50 +44,6 @@ if(!require('PriceR')){
   library('priceR')
 }
 ```
-from australia, convert $100 from 2005 into 2017 dollars
-```{r}
-country <- "AU"
-inflation_dataframe <- retrieve_inflation_data(country)
-countries_dataframe <- show_countries() 
-```
-```{r}
-adjust_for_inflation(100, 2005, country, to_date = 2017,
-inflation_dataframe = inflation_dataframe,
-countries_dataframe = countries_dataframe)
-
-adjust_for_inflation(200, 2005, country, to_date = 2017,
-inflation_dataframe = inflation_dataframe,
-countries_dataframe = countries_dataframe)
-
-adjust_for_inflation(300, 2005, country, to_date = 2017,
-inflation_dataframe = inflation_dataframe,
-countries_dataframe = countries_dataframe)
-
-```
-
-```{r}
-vectorofprices <- c(100,200,300)
-fromdates <- c(2005,2005,2005)
-todates <- c(2017,2017,2017)
-```
-
-```{r}
-# # run a for loop that outputs a vector of adjusted prices
-adjusted_prices <- vector(mode="numeric")
-for (i in 1:length(vectorofprices)){
-  new_prices <- adjust_for_inflation(vectorofprices[i], fromdates[i], country, todates[i],
-    inflation_dataframe = inflation_dataframe,
-    countries_dataframe = countries_dataframe)
-  adjusted_prices <- append(adjusted_prices, new_prices)
-}
-```
-
-```{r}
-print(adjusted_prices)
-```
-
-============================================================================
-back to movies_filtered data
 
 ```{r}
 # set country
@@ -96,23 +51,63 @@ country <- "US"
 inflation_dataframe <- retrieve_inflation_data(country)
 countries_dataframe <- show_countries() 
 
-# get budget and revenue vector 
-budgets <- movie_test[5]
-revenue <- movie_test[6]
-to_date = 2022
-
-# commented out down here is how to adjust budget for inflation, just switch budget to revenue for revenue adjustment"
-
-"
-from_dates <- movies_filtered[NA atm]
-adjusted_prices <- vector(mode="numeric")
-for (i in 1:length(budgets)){
-  new_prices <- adjust_for_inflation(budgets[i], from_dates[i], country, to_date,
-    inflation_dataframe = inflation_dataframe,
-    countries_dataframe = countries_dataframe)
-  adjusted_prices <- append(adjusted_prices, new_prices)
-}"
+# get budget and revenue vector
+budget <- as.numeric(unlist(movies_filtered[6]))
+revenue <- as.numeric(unlist(movies_filtered[7]))
+fromdates <- as.numeric(unlist(movies_filtered[5]))
+todate = 2021
 ```
 
+For loop only works starting at 2020 movies. It draws from inflation data that goes up to 2021. T
+Movies are in yearly order from newest to oldest and the first instance of 2020 is on index 221. 
+Start here and just bind what you got to budget[1:220,] and revenue[1:220]
+
+```{r}
+## budgets starting with index 221. 
+
+adjusted_budget <- vector(mode="numeric")
+for (i in 221:8852){
+  new_prices <- adjust_for_inflation(budget[i], fromdates[i], country, todate,
+    inflation_dataframe = inflation_dataframe,
+    countries_dataframe = countries_dataframe)
+  adjusted_budget <- append(adjusted_budget, new_prices)
+}
+
+# new budget vector
+new_budget <- as.character(append(budget[1:220],adjusted_budget))
+```
+
+```{r}
+## revenue starting with index 221 (Movie: Soul). On Movies filtered, Soul is index 220. 
+
+adjusted_revenue <- vector(mode="numeric")
+for (i in 221:8852){
+  new_prices <- adjust_for_inflation(revenue[i], fromdates[i], country, todate,
+    inflation_dataframe = inflation_dataframe,
+    countries_dataframe = countries_dataframe)
+  adjusted_revenue <- append(adjusted_revenue, new_prices)
+}
+
+# new revenue vector
+new_revenue <- as.character(append(revenue[1:220],adjusted_revenue))
+```
+
+
+```{r}
+## update movies_filtered and save as movies_filtered_inflAdj
+movies_filtered$budget <- new_budget 
+movies_filtered$revenue <- new_revenue 
+```
+
+```{r}
+whatnow <- movies_filtered$budget
+whatnow2 <- movies_filtered$revenue
+whatnow3 <- movies_filtered$vote_average
+```
+
+
+```{r}
+data <- write_excel_csv(movies_filtered, "movies_filtered_adjInfl.csv")
+```
 
 
