--- a/Deduplicate and create train and test set.Rmd
+++ b/Deduplicate and create train and test set.Rmd
@@ -19,16 +19,38 @@ library(dplyr)
 ```
 
 ```{r read file in}
-# references
-# https://www.geeksforgeeks.org/how-to-remove-duplicate-rows-in-r-dataframe/
-# https://datatofish.com/export-dataframe-to-csv-in-r/
-
-movies_filtered <- distinct(read_csv('movies_filtered_duprows.csv', col_names =c('title','genres','original_language','production_companies','release_date','budget','revenue','runtime','vote_average','vote_count','credits'), trim_ws = TRUE, show_col_types = FALSE)) 
-
-# distinct() removes duplicate rows
-
-write.csv(movies_filtered,file ='movies_filtered.csv', row.names = FALSE)
+# # references
+# # https://www.geeksforgeeks.org/how-to-remove-duplicate-rows-in-r-dataframe/
+# # https://datatofish.com/export-dataframe-to-csv-in-r/
+# 
+# movies_filtered <- distinct(read_csv('movies_filtered_duprows.csv',trim_ws=TRUE,  show_col_types = FALSE))
+# 
+# write.csv(movies_filtered,file ='movies_filtered.csv', row.names = FALSE)
 ```
+
+```{r remove bad revenue and budget rows}
+movies_filtered <- read.csv('movies_filtered_adjInfl.csv', header=TRUE)
+
+plot(movies_filtered$budget, (movies_filtered$revenue / movies_filtered$budget), col='red', xlab='Movie Budget',ylab='Ratio of Revenue to Budget')
+max(movies_filtered$revenue/movies_filtered$budget)
+min(movies_filtered$revenue/movies_filtered$budget)
+
+# Best way to remove strange revenue or budget rows is removing rows based on ratio of revenue to budget. A very small ratio likely means a huge budget with unrealistically small revenue and a large ratio means a huge revenue with an unrealistically small budget. The following removes the rows with the top and bottom half percent of revenue/budget ratio within the dataset:
+movies_filtered_clean_revenue_and_budget <- filter(movies_filtered, revenue/budget<max(quantile(revenue/budget,0.995))
+                           & revenue/budget>min(quantile(revenue/budget,0.005))) # only removes 1% of the dataset but makes the data much cleaner.
+max(movies_filtered_clean_revenue_and_budget$revenue/movies_filtered1$budget)
+min(movies_filtered_clean_revenue_and_budget$revenue/movies_filtered1$budget)
+
+plot(movies_filtered_clean_revenue_and_budget$budget, (movies_filtered_clean_revenue_and_budget$revenue / movies_filtered_clean_revenue_and_budget$budget), col='red', xlab='Movie Budget',ylab='Ratio of Revenue to Budget')
+```
+```{r write cleaned up revenue and budget file}
+write.csv(movies_filtered_clean_revenue_and_budget,file ='movies_filtered_clean_revenue_and_budget.csv', row.names = FALSE)
+```
+
+```{r}
+movies_all <- read.csv('movies_filtered_all_attributes.csv', header=TRUE)
+```
+
 
 ```{r shuffle and partition data into training and test sets}
 #references:
@@ -37,12 +59,15 @@ write.csv(movies_filtered,file ='movies_filtered.csv', row.names = FALSE)
 
 set.seed(500)
 
-movies_shuffled <- movies_filtered[sample(1:nrow(movies_filtered)), ]
+movies_shuffled <- movies_all[sample(1:nrow(movies_filtered_clean_revenue_and_budget)), ]
 
 trainIndex <- createDataPartition(movies_shuffled$revenue, p=0.8, list=FALSE) #80/20 split
 movie_train <- movies_shuffled[trainIndex,]
 movie_test <- movies_shuffled[-trainIndex,]
+```
 
+
+```{r write training and test}
 write.csv(movie_train,file='movie_train.csv', row.names = FALSE)
 write.csv(movie_test,file='movie_test.csv', row.names = FALSE)
 ```
